--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
 				</md-content> 
 			</md-sidenav>
 	
-			<md-content class="full-height" style="overflow:hidden" flex>
+			<md-content class="full-height" flex>
 			
 				<span ng-include="fabTemplateUrl" ng-if="signedIn && fabTemplateUrl"></span>
 	
@@ -81,7 +81,7 @@
 						</h1>
 					</md-toolbar>
 		
-					<md-content class="md-padding" flex>
+					<md-content class="md-padding" id="appview-container" flex>
 		
 						<div ng-view ng-if="signedIn" id="appview"></div>
 						
