signin button fix

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,7 @@
 								<span hide-sm>{{currentUser.firstName}}</span>
 								<img class="face" src="about:blank" ng-src="{{currentUser.iconUrl}}"/>
 							</a>
-							<md-button class="md-raised" ng-click="signIn()" ng-if="!signedIn && !signingIn">Sign in</md-button>
+							<md-button class="md-raised md-primary" ng-click="signIn()" ng-if="!signedIn && !signingIn" md-theme="indigo">Sign in</md-button>
 		
 						</h1>
 					</md-toolbar>
