--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,8 @@
 		<link type="text/css" rel="stylesheet" href="/app.css" />
 		<link type="text/css" rel="stylesheet" href="/material-transparent-theme.css" />
 		
+		<link type="text/css" rel="stylesheet" href="/components/md-typeahead/md-typeahead.css" />
+		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
 		<!-- endbuild -->
@@ -141,6 +143,7 @@
 		<script type="text/javascript" src="/components/fn-debounce.js"></script>
 		<script type="text/javascript" src="/components/NotifyService/NotifyService.js"></script>
 		<script type="text/javascript" src="/components/AlertService/AlertService.js"></script>
+		<script type="text/javascript" src="/components/md-typeahead/md-typeahead.js"></script>
 		
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		
