--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/blue-theme.css" />
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/green-theme.css" />
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/yellow-theme.css" />
+		<link type="text/css" rel="stylesheet" href="/libs/angular-datepicker/dist/index.css" />
 		<!-- endbuild -->
 		
 		<!-- build:css app.min.css -->
@@ -26,6 +27,7 @@
 		<link type="text/css" rel="stylesheet" href="/material-transparent-theme.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/md-typeahead/md-typeahead.css" />
+		<link type="text/css" rel="stylesheet" href="/components/md-datepicker/md-datepicker.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
@@ -127,6 +129,7 @@
 		<script type="text/javascript" src="/libs/angular-material/angular-material.js"></script>
 		<script type="text/javascript" src="/libs/angular-filter/dist/angular-filter.js"></script>
 		<script type="text/javascript" src="/libs/angular-elastic/elastic.js"></script>
+		<script type="text/javascript" src="/libs/angular-datepicker/dist/index.js"></script>
 		<!-- endbuild -->
 	
 		<!-- build:js app.min.js -->
@@ -144,6 +147,7 @@
 		<script type="text/javascript" src="/components/NotifyService/NotifyService.js"></script>
 		<script type="text/javascript" src="/components/AlertService/AlertService.js"></script>
 		<script type="text/javascript" src="/components/md-typeahead/md-typeahead.js"></script>
+		<script type="text/javascript" src="/components/md-datepicker/md-datepicker.js"></script>
 		
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		
