--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,7 +51,7 @@
 			</md-content> 
 		</md-sidenav>
 
-		<md-content class="full-height" style="overflow:hidden;" layout="column" flex>
+		<md-content class="full-height" style="overflow:hidden; background-color:#ececec" layout="column" flex>
 		
 			<span ng-include="fabTemplateUrl" ng-if="signedIn && fabTemplateUrl" layout="column"></span>
 
