first RealtimeService implementation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -136,6 +136,7 @@
 		<script type="text/javascript" src="/components/fn-debounce.js"></script>
 		<script type="text/javascript" src="/components/NotifyService/NotifyService.js"></script>
 		<script type="text/javascript" src="/components/AlertService/AlertService.js"></script>
+		<script type="text/javascript" src="/components/RealtimeService/RealtimeService.js"></script>
 		<script type="text/javascript" src="/components/md-typeahead/md-typeahead.js"></script>
 		<script type="text/javascript" src="/components/md-datepicker/md-datepicker.js"></script>
 		
