--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
+		<link type="text/css" rel="stylesheet" href="/components/meeting/list-responsive.css" />
 		<!-- endbuild -->
 	
 	</head>
