--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,8 @@
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list-responsive.css" />
+		
+		<link type="text/css" rel="stylesheet" href="/components/activity/list-responsive.css" />
 		<!-- endbuild -->
 	
 	</head>
