tabs swipe in task list

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,7 +94,7 @@
 				</h1>
 			</md-toolbar>
 
-			<md-content class="md-padding full-height" id="appview-container" flex>
+			<md-content class="md-padding full-height" id="appview-container" md-swipe-left="onSwipeLeft()" md-swipe-right="onSwipeRight()" flex>
 
 				<p class="text-error" style="text-align:center; padding:15px;" ng-show="viewError">Sorry, an error occurred. Please try again.</p>
 					
