enabled Chrome on Android standalone app

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,8 +2,12 @@
 <html data-ng-app="teampot">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
 		<title>TeamPot</title>
+		
+		<meta name="mobile-web-app-capable" content="yes">
+     	<link rel="icon" sizes="192x192" href="/img/launcher-icon-4x.png">
+		<link rel="manifest" href="manifest.json">
 		
 		<style>
 			[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
