--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/blue-theme.css" />
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/green-theme.css" />
 		<link type="text/css" rel="stylesheet" href="/libs/angular-material/themes/yellow-theme.css" />
+		<!-- <link type="text/css" rel="stylesheet" href="/libs//material-design-iconic-font/css/material-design-iconic-font.min.css"> -->
 		<link type="text/css" rel="stylesheet" href="/libs/angular-datepicker/dist/index.css" />
 		<!-- endbuild -->
 		
@@ -47,7 +48,7 @@
 			<md-toolbar md-theme="indigo">
 				<h1 class="md-toolbar-tools">
 					<md-button ng-href="#/projects" ng-click="closeSidebar()" >
-						<md-icon icon="/img/icons/ic_arrow_back_24px.svg"></md-icon>
+						<i class="md-arrow-back"></i>
 						<md-tooltip>Back to projects</md-tooltip>
 					</md-button>
 					<b>{{currentProject.name}}</b>
@@ -65,14 +66,14 @@
 			<md-toolbar md-scroll-shrink class="md-whiteframe-z2">
 				<h1 class="md-toolbar-tools" layout="row">
 					<a hide-gt-md ng-click="openSidebar()" aria-label="Toggle Menu" href ng-if="sidebarTemplateUrl"> 
-						<md-icon icon="/img/icons/ic_menu_24px.svg"></md-icon>
+						<i class="md-menu"></i>
 					</a>
 					
 					<span ng-if="signedIn" flex>
 					
 						<span ng-if="currentProject" hide-gt-md>
 							<b>{{currentProject.name}}</b>
-							<md-icon icon="/img/icons/ic_chevron_right_24px.svg" style="width:24px;" hide-sm></md-icon>
+							<i class="md-chevron-right" style="width:24px;" hide-sm></i>
 						</span>
 						<span ng-if="!currentProject"><b>TeamPot</b></span>
 	
@@ -80,7 +81,7 @@
 							<li class="route-breadcrumb" ng-repeat="breadcrumb in breadcrumbs" >
 								<span ng-if="!$last && $index>=2"> 
 									<a ng-href="#{{breadcrumb.path}}">{{breadcrumb.label}}</a> 
-									<md-icon icon="/img/icons/ic_chevron_right_24px.svg" style="width:24px;"></md-icon>
+									<i class="md-chevron-right" style="width:24px;"></i>
 								</span>
 								<span ng-if="$last && $index>=2">{{breadcrumb.label}}</span>
 							</li>
