--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -146,6 +146,7 @@
 		<script type="text/javascript" src="/components/NotifyService/NotifyService.js"></script>
 		<script type="text/javascript" src="/components/AlertService/AlertService.js"></script>
 		<script type="text/javascript" src="/components/RealtimeService/RealtimeService.js"></script>
+		<script type="text/javascript" src="/components/PreloadService.js"></script>
 		<script type="text/javascript" src="/components/md-typeahead/md-typeahead.js"></script>
 		<script type="text/javascript" src="/components/md-datepicker/md-datepicker.js"></script>
 		
