--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
 			<md-toolbar md-theme="indigo">
 				<h1 class="md-toolbar-tools">
 					<md-button ng-href="#/projects" ng-click="closeSidebar()" >
-						<i class="mdi-arrow-back mdi-2x"></i>
+						<i class="mdi-arrow-back mdi-lg"></i>
 						<md-tooltip>Back to projects</md-tooltip>
 					</md-button>
 					<b>{{currentProject.name}}</b>
@@ -63,7 +63,7 @@
 		
 			<span ng-include="fabTemplateUrl" ng-if="signedIn && fabTemplateUrl" layout="column"></span>
 
-			<md-toolbar md-scroll-shrink class="md-whiteframe-z2">
+			<md-toolbar md-scroll-shrink class="md-whiteframe-z2" id="main-toolbar">
 				<h1 class="md-toolbar-tools" layout="row">
 					<a hide-gt-md ng-click="openSidebar()" aria-label="Toggle Menu" href ng-if="sidebarTemplateUrl"> 
 						<i class="mdi-menu mdi-lg"></i>
@@ -71,7 +71,7 @@
 					
 					<span ng-if="signedIn" flex>
 					
-						<span ng-if="currentProject" hide-gt-md>
+						<span ng-if="currentProject" class="route-breadcrumb" hide-gt-md>
 							<b>{{currentProject.name}}</b>
 							<i class="mdi-chevron-right" hide-sm></i>
 						</span>
@@ -81,7 +81,7 @@
 							<li class="route-breadcrumb" ng-repeat="breadcrumb in breadcrumbs" >
 								<span ng-if="!$last && $index>=2"> 
 									<a ng-href="#{{breadcrumb.path}}">{{breadcrumb.label}}</a> 
-									<i class="mdi-chevron-right"></i>
+									<i class="mdi-chevron-right"></i>&nbsp;
 								</span>
 								<span ng-if="$last && $index>=2">{{breadcrumb.label}}</span>
 							</li>
