activity stats (with fake stats)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/meeting/list-responsive.css" />
 		
+		<link type="text/css" rel="stylesheet" href="/components/activity/list.css" />
 		<link type="text/css" rel="stylesheet" href="/components/activity/list-responsive.css" />
 		<!-- endbuild -->
 	
