sidebar close/click fix

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
 		<md-sidenav md-is-locked-open="$media('md')" layout="column" class="md-sidenav-left md-whiteframe-z3" md-component-id="left" ng-if="sidebarTemplateUrl"> 
 			<md-toolbar md-theme="indigo">
 				<h1 class="md-toolbar-tools">
-					<md-button ng-href="#/projects" ng-click="closeSidebar()" >
+					<md-button ng-href="#/projects">
 						<i class="mdi-arrow-back mdi-lg"></i>
 						<md-tooltip>Back to projects</md-tooltip>
 					</md-button>
