launcher icon url fix

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 		<title>TeamPot</title>
 		
 		<meta name="mobile-web-app-capable" content="yes">
-     	<link rel="icon" sizes="192x192" href="/img/launcher-icon-4x.png">
+     	<link rel="icon" sizes="192x192" href="/img/teampot-logo-192px.png">
 		<link rel="manifest" href="manifest.json">
 		
 		<style>
